dfir_rs/tests/compile-fail-stable/surface_singleton_undefined_nostate.rs
../compile-fail/surface_singleton_undefined_nostate.rs